Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11659

Painting is not shown for Animators in the QML profiler when the non render thread is blocked

XMLWordPrintable

    • 5977fbfd16f4d2d268dfecc48b1120a1f0dcf004 (qtdeclarative) and cc4aae532d3f74bacaa46127a7a915fb8f283a7d

      Qt has added Animators which allows render thread animations when the rest of the application is blocked. However when using these the QML profiler shows no painting is ongoing when the app is blocking the main thread, even though you can see Animator based animations are ongoing.

      This example can be profiled to show the problem:

      import QtQuick 2.2
      
      Rectangle {
          id: root
          width: 500
          height: 500
      
          Component {
              id: text1
              Text {
                  text: "Hello world"
              }
          }
      
          Rectangle {
              id: rect1
              x: 100
              y: 100
              width: 100
              height: 100
              color: "blue"
          }
      
          Rectangle {
              id: rect2
              x: 300
              y: 100
              width: 100
              height: 100
              color: "orange"
          }
      
          RotationAnimator {
              target: rect1
              from: 0
              to: 360
              duration: 2000
              running: true
              loops: Animation.Infinite
          }
      
          NumberAnimation {
              target: rect2;
              property: "rotation";
              from: 0
              to: 360
              duration: 2000;
              running: true
              loops: Animation.Infinite
          }
      
          Loader {
              id: textLoader
          }
      
          SequentialAnimation {
              running: true
              PauseAnimation { duration: 1000 }
              ScriptAction { script: textLoader.sourceComponent = text1 }
          }
      
      
      
      
      
      
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            designker Nigel Hietala
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes